--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 	<title>Game</title>
     <script type="text/javascript" src="js/phaser.min.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
+    <style>
+        body {
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
 	<div id="game"></div>
