--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head> 
 	<title>Game</title>
     <script type="text/javascript" src="js/phaser.min.js"></script>
+    <script type="text/javascript" src="js/lodash.min.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
     <style>
         body {
